# vacancy_parser

./: README.md  main.py  pyproject.toml
src/: api_classes.py  json_saver.py  utils.py  vacancy.py
tests/: test_json_saver.py  test_utils.py  test_vacancy.py
